create generate queue number
